# WYRD-Protocol-World-Yielding-Real-time-Data-AI-world-model

./: .aider.conf.yml  .gitignore  CLAUDE.md  README.md  ROADMAP.md  TASK_PHASE0_FOUNDATION.md  TASK_PHASE1_ECS_CORE.md  TASK_PHASE2_PERSISTENT_MEMORY.md  TASK_wyrd_phase11d.md  TASK_wyrd_phase11e.md  TASK_wyrd_phase11f.md  TASK_wyrd_phase12a.md  TASK_wyrd_phase12b.md  TASK_wyrd_phase12c.md  TASK_wyrd_phase13.md  TASK_wyrd_phase14.md  TASK_wyrd_phase15.md  TASK_wyrd_phase16.md  TASK_wyrd_phase17.md  TASK_wyrd_phase18.md  TASK_wyrd_phase19.md  TODO.md  WYRD_Phased_Implementation_Plan.md  WYRD_Research_Determinations.md  mkdocs.yml  pyproject.toml  requirements.txt  wyrd_chat_cli.py  wyrd_world_cli.py
configs/: memory_promotion.yaml  persona_modes.example.yaml  truth_eval_suite.example.yaml
docs/: AI_World_Simulation__Foundations,_Architectures,_Applications,_Challenges,_and_Future_Horizons_in_Generative_World_Models_and_Embodied_Intelligence.md  index.md
install/: __init__.py  (+7 more)
research_data/: pyproject.toml
research_data/config/: memory_store.example.yaml  micro_rag.example.yaml
research_data/src/wyrdforge/models/: evals.py
research_data/src/wyrdforge/runtime/: demo_seed.py
research_data/src/wyrdforge/schemas/: contradiction_record.schema.json  eval_case.schema.json  hurt.schema.json  micro_context_packet.schema.json  persona_packet.schema.json  symbolic_trace_record.schema.json
research_data/src/wyrdforge/security/: permission_guard.py
research_data/src/wyrdforge/services/: bond_graph_service.py  memory_store.py  micro_rag_pipeline.py  truth_calibrator.py
(+283 files in other folders)
